testing/framework/resources/Advanced/Failing/mondrian/query6234.e
USA	CA	Fremont	6131	Robert Cooper	Robert Cooper	M	M	Bachelors Degree	$70K - $90K
